--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,14 @@ p {
 	/*background-color: #f9f9f9;*/
 	background-color: #e7e7e7;
 	position: absolute;
-	top: 0;
+	top: 3.6rem;
 	left: 0;
 	right: 0;
 	bottom: 0;
 	z-index: 1;
+}
+.mobile-interface .desktop {
+	top: 4.8rem;
 }
 
 .windows {
